i changed the directory of the image

--- a/corona-free-dark-bootstrap-admin-template-1.0.0/template/Home-page.html
+++ b/corona-free-dark-bootstrap-admin-template-1.0.0/template/Home-page.html
@@ -52,8 +52,8 @@
                         Palms Cinema strives to provide exceptional service and presentation, great entertainment choices, and competitive prices to the communities we serve.
                     </p>
                 </div>
-                <img class="img-fluid w-50 d-none d-xl-block" src="hero_slash.png" alt="" style="height:50vh">
-                <img class="img-fluid w-50 d-xl-none d-md-block" src="Netflix1.png" alt="">
+                <img class="img-fluid w-50 d-none d-xl-block" src="Image/hero_slash.png" alt="" style="height:50vh">
+                <img class="img-fluid w-50 d-xl-none d-md-block" src="Image/Netflix1.png" alt="">
             </div>   
         </div>
     </section>
@@ -61,15 +61,15 @@
     <!-- Movie Partners -->
     <section class="bg-dark" style="height: 10vh; width: 100%;">
             <div class="d-sm-flex justify-content-between" style="display:flex; align-items:center; padding: 5px;">
-                <img src="showmax.png" alt="">
-                <img src="m-net.png" alt="" >
-                <img class="img-fluid d-none d-xl-block" src="originals.png" alt="">
-                <img class="img-fluid d-none d-xl-block" src="kyknet.png" alt="">
-                <img src="hbo.png" alt="">
-                <img class="img-fluid d-none d-xl-block" src="nickelodeon.png" alt="" style="height:25px">
-                <img class="img-fluid d-none d-sm-block" src="nick_jr.png" alt="">
-                <img class="img-fluid d-none d-xl-block" src="boomerang.png" alt="">
-                <img class="img-fluid d-none d-sm-block" src="cartoon_network.png" alt="">
+                <img src="Image/showmax.png" alt="">
+                <img src="Image/m-net.png" alt="" >
+                <img class="img-fluid d-none d-xl-block" src="Image/originals.png" alt="">
+                <img class="img-fluid d-none d-xl-block" src="Image/kyknet.png" alt="">
+                <img src="Image/hbo.png" alt="">
+                <img class="img-fluid d-none d-xl-block" src="Image/nickelodeon.png" alt="" style="height:25px">
+                <img class="img-fluid d-none d-sm-block" src="Image/nick_jr.png" alt="">
+                <img class="img-fluid d-none d-xl-block" src="Image/boomerang.png" alt="">
+                <img class="img-fluid d-none d-sm-block" src="Image/cartoon_network.png" alt="">
             </div>
     </section>
 
@@ -87,17 +87,17 @@
         <div class="container">
             <div class="d-sm-flex justify-content-evenly pt-3">
                 <div>
-                    <img src="pitch_perfect_tuning.gif" alt="">
+                    <img src="Image/pitch_perfect_tuning.gif" alt="">
                     <h4 class="pt-3 text-light">Pitch-Perfect Tuning</h4>
                     <p style="color:#888;;" class="mb-5">Perfectly tuned sound, every time.</p>
                 </div>
                 <div>
-                    <img src="endless_sweet_spot.gif" alt="">
+                    <img src="Image/endless_sweet_spot.gif" alt="">
                     <h4 class="pt-3 text-light">Endless Sweet Spot</h4>
                     <p class="mb-5" style="color:#888">There are no bad seats in an Palms Cinema.</p>
                 </div>
                 <div>
-                    <img src="pin_point_accuracy.gif" alt="">
+                    <img src="Image/pin_point_accuracy.gif" alt="">
                     <h4 class="pt-3 text-light">Pin-Point Accuracy</h4>
                     <p class="mb-5" style="color:#888">Laser-aligned audio placement.</p>
                 </div>
@@ -124,17 +124,17 @@
     <!--image-->
             <div class="d-sm-flex justify-content-evenly pt-3">
                 <div>
-                    <img src="heightened_realism.gif" alt="">
+                    <img src="Image/heightened_realism.gif" alt="">
                     <h4 class="text-light pt-3">Dual Projection</h4>
                     <p style="color:#888; letter-spacing:-1.4px;" class="mb-5">Unparalleled brightness and brilliant clarity.</p>
                 </div>
                 <div class="">
-                    <img src="highest_resolution.gif" alt="">
+                    <img src="Image/highest_resolution.gif" alt="">
                     <h4 class="text-light pt-3" style="letter-spacing:-1.7px;">Highest Resolution</h4>
                     <p style="color:#888;" class="mb-5">Standard-setting clarity.</p>
                 </div>
                 <div>
-                    <img src="highest_quality_3D.gif" alt="">
+                    <img src="Image/highest_quality_3D.gif" alt="">
                     <h4 class="text-light pt-3">Highest Quality 3D</h4>
                     <p style="color:#888" class="mb-5">Hyper-lifelike dimensionality.</p>
                 </div>
@@ -156,17 +156,17 @@
             <!--image-->
             <div class="d-sm-flex justify-content-evenly pt-3">
                 <div>
-                    <img src="heightened_realism.gif" alt="">
+                    <img src="Image/heightened_realism.gif" alt="">
                     <h4 class="text-light ">Heightened Realism</h4>
                     <p style="color:#888" class="mb-5">Custom, reflective screens are extra bright.</p>
                 </div>
                 <div>
-                    <img src="quality_and_consistency.gif" alt="">
+                    <img src="Image/quality_and_consistency.gif" alt="">
                     <h4 class="text-light">Quality & Consistency</h4>
                     <p style="color:#888" class="mb-5">Custom-designed & built.</p>
                 </div>
                 <div>
-                    <img src="picture_perfect.gif" alt="">
+                    <img src="Image/picture_perfect.gif" alt="">
                     <h4 class="text-light">Picture Perfect</h4>
                     <p style="color:#888" class="mb-5">Real-time system adjustments</p>
                 </div>
