--- a/corona-free-dark-bootstrap-admin-template-1.0.0/template/admin-reg-page.html
+++ b/corona-free-dark-bootstrap-admin-template-1.0.0/template/admin-reg-page.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="style3.css"> -->
 </head>
-<body style="background-image:url(splash-screen.png)">
+<body style="background-image:url(Image/splash-screen.png)">
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar fixed-top" style="background-color:black;">
         <div class="container">
