--- a/corona-free-dark-bootstrap-admin-template-1.0.0/template/registration-page.html
+++ b/corona-free-dark-bootstrap-admin-template-1.0.0/template/registration-page.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-image:url(splash-screen.png)">
+<body style="background-image:url(Image/splash-screen.png)">
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar fixed-top" style="background-color:black;">
         <div class="container">
