i added another features

--- a/corona-free-dark-bootstrap-admin-template-1.0.0/template/customer-list.html
+++ b/corona-free-dark-bootstrap-admin-template-1.0.0/template/customer-list.html
@@ -269,6 +269,7 @@
                   let user = JSON.parse(customer)
                   uname.value=user[cus].userName;
                   pword.value=user[cus].password;
+                  uname.focus();
                 }
                 function editcustomer(pami) {
                   customer = localStorage.getItem("cinemaInfo");
