added new features

--- a/template/casr.html
+++ b/template/casr.html
@@ -20,7 +20,7 @@
          {
         
         // chairs += r+'<td><img src="chair.jpg" width="100" height="150"></td>'
-        chairs +=`<td><span style="background-color: red;">NO ${r+1}</span><img src="chair.jpg" width="100" height="150"></td>`
+        chairs +=`<td><span style="background-color: red;">NO ${r+1}</span><img src="Image/chair.jpg" width="100" height="150"></td>`
         cArrange++;
         if (cArrange == noPerRow) {
          chairs+= '</tr><tr>';
