--- a/template/Home-page.html
+++ b/template/Home-page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Palms Cinema</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="home.css">
 </head>
@@ -42,9 +43,9 @@
 
     <!--Body-->
     <section class="bg-dark text-light p-5 text-center" style="height:90vh;">
-        <div class="container" style="padding-top: 150px;">
+        <div class="container" style="padding-top: 120px;">
             <div class="d-sm-flex align-items-center justify-content-between">
-                <div style="margin-top:60px;">
+                <div style="margin-top:20px;">
                     <h1>Welcome to <span class="text-danger">
                         Palms Cinema
                     </span></h1>
@@ -177,6 +178,54 @@
             </p>
         </div>
     </section>
+    
+    <footer class="p-2 bg-dark text-white text-center position-relative">
+        <div class=" container d-flex pt-5" style="display:flex; justify-content:center;">
+            <a href="login.html">
+                <span class="icon mx-5 h4">
+                    <i class="bi bi-facebook"></i>
+                </span>
+            </a>
+            <a href="login.html">
+                <span class="icon h4">
+                    <i class="bi bi-twitter"></i>
+                </span>
+            </a>
+            <a href="login.html">
+                <span class="icon mx-5 h4">
+                    <i class="bi bi-instagram"></i>
+                </span>
+            </a>
+            <a href="login.html">
+                <span class="icon h4">
+                    <i class="bi bi-youtube"></i>
+                </span>
+            </a>
+
+              <!-- <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
+              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrap admin templates</a> from Bootstrapdash.com</span> -->
+            </div>
+
+            <div class="container text-center">
+                <ul class="list-unstyled d-flex my-4" style="justify-content:center;">
+                    <li class="mx-3">
+                        <a href="" class="text-info">About Us</a>
+                    </li>                    
+                    <li class="mx-3">
+                        <a href="" class="text-info">Cookies Policy</a>
+                    </li>
+                    <li class="mx-3">
+                        <a href="" class="text-info">Privacy</a>
+                    </li>
+                    <li class="">
+                        <a href="" class="text-info">Terms & Conditions</a>
+                    </li>
+                </ul>
+                <p class="">Copyright &copy; 2022 Palms Cinema</p>
+            </div>
+    </footer>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- container-scroller -->
     <!-- plugins:js -->
