--- a/template/admin-login-page.html
+++ b/template/admin-login-page.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- <link rel="stylesheet" href="style4.css"> -->
 </head>
-<body style="background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(Image/Netflix2.jpg);">
+<body style="background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(Image/display.png);">
      <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar fixed-top" style="background-color:black;">
             <div class="container">
@@ -40,22 +40,44 @@
                 </div>
             </div>
         </nav>
-    <div class="container my-5">
-        <h1 class="text-info text-center" style="margin-top:130px; ">Welcome to Palms Cinema</h1>
-       <form class="row g-3 justify-content-evenly">
-           <div class="col-md-7">
-                <label for="text" class="form-label text-light">Username</label>
-                <input type="text" name="" id="uname" class="form-control bg-dark" style="color:white;">
-           </div>
-           <div class="col-md-7">
-                <label for="text" class="form-label text-light">Password</label>
-                <input type="password" name="" id="pword" class="form-control bg-dark" style="color:white;"><input type="checkbox" onclick="myFunction()"> <span class="text-light">Show password</span>
-           </div>
-       </form>
-       <div class="my-3">
-           <button class="btn btn-primary" onclick="collect()" style="margin-left:40vw">Log in</button>
-        </div>
-    </div>
+        <div class="container-scroller" style="padding-top: 150px;">
+                <div class="container-fluid page-body-wrapper full-page-wrapper">
+                  <div class="row w-100 m-0">
+                    <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
+                      <div class="card col-lg-4 mx-auto" style="border:none;">
+                        <div class="card-body px-5 py-5 text-light"style="background-color:#191c24;">
+                          <h3 class="card-title text-left mb-3">Login</h3>
+                          <form>
+                            <div class="form-group">
+                              <label>Username</label>
+                              <input type="text" class="form-control p_input text-light" id="uname" style="background-color: #2A3038;border: 1px solid #2c2e33; box-shadow:none;">
+                            </div>
+                            <div class="form-group">
+                              <label>Password</label>
+                              <input type="password" class="form-control p_input text-light" id="pword" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                            </div>
+                            <div class="form-group d-flex align-items-center justify-content-between">
+                              <div class="form-check">
+                                <label class="form-check-label">
+                                  <input type="checkbox" onclick="myFunction()" class="form-check-input"> Show password </label>
+                              </div>
+                              <!-- <a href="#" class="forgot-pass">Forgot password</a> -->
+                            </div>
+                          </form>
+                          <div class="text-center">
+                                <button type="submit" onclick="collect()" class="btn btn-primary btn-block enter-btn my-2" style="width:26vw;">Login
+                                <i class="bi bi-laptop"></i>
+                                </button>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- content-wrapper ends -->
+                  </div>
+                  <!-- row ends -->
+                </div>
+                <!-- page-body-wrapper ends -->
+              </div>
 
     <script>
         uname.focus();
@@ -67,7 +89,6 @@
                 alert("Login successful")
                     location.href =  'index.html'
                 } else {
-                    alert ("Invalid username and password")
                     uname.focus();
                 }
                 uname.value = "";
