--- a/template/admin-reg-page.html
+++ b/template/admin-reg-page.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="style3.css"> -->
 </head>
-<body style="background-image:url(Image/splash-screen.png)">
+<body style="background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(Image/Netflix2.jpg)">
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar fixed-top" style="background-color:black;">
         <div class="container">
@@ -40,34 +42,64 @@
             </div>
         </div>
     </nav>
-    <h1 class="text-info text-center" style="margin-top:130px;">Welcome to Palms Cinema</h1>
-    <div class="container my-4">
-        <form class="row g-3">
-            <div class="col-md-6">
-                <label for="" class="form-label text-light">Firstname</label>
-                <input type="text" class="form-control bg-dark" id="t1" style="color:white;">
+    <div class="container-scroller text-light" style="padding-top: 100px;">
+        <div class="container-fluid page-body-wrapper full-page-wrapper">
+          <div class="row w-100 m-0">
+            <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
+              <div class="card col-lg-4 mx-auto" style="border:none;">
+                <div class="card-body px-5 py-5" style="background-color:#191c24;">
+                  <h3 class="card-title text-left mb-3">Register</h3>
+                  <form>
+                    <div class="form-group">
+                      <label>First name</label>
+                      <input type="text" class="form-control p_input text-light" id="t1" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                    </div>
+                    <div class="form-group">
+                      <label>Lastname</label>
+                      <input type="text" class="form-control p_input text-light" id="t2" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                    </div>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="email" class="form-control p_input text-light" id="t4" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                    </div>
+                    <div class="form-group">
+                        <label>Username</label>
+                        <input type="text" class="form-control p_input text-light" id="t6" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                    </div>
+                    <div class="form-group">
+                      <label>Password</label>
+                      <input type="password" class="form-control p_input text-light" id="t7" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                    </div>
+                    <div class="form-group d-flex align-items-center justify-content-between">
+                      <div class="form-check">
+                        <label class="form-check-label">
+                          <input type="checkbox" class="form-check-input" onclick="myFunction()">Show password</label>
+                      </div>
+                      <!-- <a href="#" class="forgot-pass">Forgot password</a> -->
+                    </div>
+                  </form>
+                  <div class="text-center">
+                        <button type="submit" class="btn btn-primary btn-block enter-btn my-2" style="width:25vw;" onclick="register()">Sign up
+                            <i class="bi bi-laptop"></i>
+                        </button>
+                      </div>
+                      <div class="d-flex">
+                        <button class="btn btn-facebook col mx-2 my-2 text-light" style="background: #3b579d;">
+                          <i class="mdi mdi-facebook"></i>Facebook</button>
+                        <button class="btn btn-google col text-light my-2" style="background: #dc4a38;">
+                          <i class="mdi mdi-google-plus"></i>Google plus</button>
+                      </div>
+                      <p class="sign-up text-center">Already have an Account?<a href="login.html"> Log in</a></p>
+                      <p class="terms text-center" style="width:100%; font-size:14.2px">By creating an account you are accepting our<a href="#"> Terms & Conditions</a></p>
+                </div>
+              </div>
             </div>
-            <div class="col-md-6">
-                <label for="" class="form-label text-light">Lastname</label>
-               <input type="text" class="form-control bg-dark" id="t2" style="color:white;">
-            </div>
-            <div class="col-12">
-                <label for="" class="form-label text-light">Email address</label>
-                <input type="text" class="form-control bg-dark" id="t4" style="color:white;">
-            </div>
-            <div class="col-md-6">
-                <label for="" class="form-label text-light">Username</label>
-                <input type="text" class="form-control bg-dark" id="t6" style="color:white;">
-            </div>
-            <div class="col-md-6">
-                <label for="" class="form-label text-light">Password</label>
-                <input type="password" class="form-control bg-dark" id="t7" style="color:white;"><input type="checkbox" onclick="myFunction()"> <span class="text-light">Show password</span>
-            </div>
-        </form>
-        <div class="col-12 my-2">
-            <button type="submit" onclick="register()" class="btn btn-primary">Register</button>
+            <!-- content-wrapper ends -->
+          </div>
+          <!-- row ends -->
         </div>
-    </div>
+        <!-- page-body-wrapper ends -->
+      </div>
     <script>
         var arr = [];
         t1.focus();
@@ -108,6 +140,7 @@
             t4.value = "";
             t6.value = "";
             t7.value = "";
+            location.href
         }
             }
             myFunction=()=>{
