--- a/template/customer-list.html
+++ b/template/customer-list.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Customer-list</title>
 </head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <!-- plugins:css -->
     <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css">
@@ -75,27 +76,34 @@
                 <span class="nav-link">Navigation</span>
               </li>
               <li class="nav-item menu-items">
+                <a class="nav-link" href="index.html">
+                    <span class="menu-icon">
+                        <i class="mdi mdi-speedometer"></i>
+                      </span>
+                  <span class="menu-title">Dashboard</span>
+                </a>
+              </li>
+              <li class="nav-item menu-items">
                 <a class="nav-link" href="customer-list.html">
+                  <span class="menu-icon">
+                    <i class="bi bi-list-check"></i>
+                  </span>
                   <span class="menu-title">Customer list</span>
                 </a>
               </li>
               <li class="nav-item menu-items">
                 <a class="nav-link" href="staff-list.html">
+                  <span class="menu-icon">
+                    <i class="bi bi-list-ul"></i>
+                  </span>
                   <span class="menu-title">Staff list</span>
                 </a>
               </li>
               <li class="nav-item menu-items">
-                <a class="nav-link">
-                  <span class="menu-title">Tables</span>
-                </a>
-              </li>
-              <li class="nav-item menu-items">
-                  <a class="nav-link" href="#">
-                    <span class="menu-title">Customer list</span>
-                  </a>
-                </li>
-              <li class="nav-item menu-items">
                 <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+                    <span class="menu-icon">
+                        <i class="bi bi-shield-check"></i>
+                      </span>
                   <span class="menu-title">User Pages</span>
                   <i class="menu-arrow"></i>
                 </a>
@@ -161,7 +169,7 @@
                         </div>
                       </a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item preview-item">
+                      <a class="dropdown-item preview-item" onclick="logout()">
                         <div class="preview-thumbnail">
                           <div class="preview-icon bg-dark rounded-circle">
                             <i class="mdi mdi-logout text-danger"></i>
@@ -193,14 +201,14 @@
             </table>
         
             <table border="1" width="60%"; align="center">
-                <tr>
+                <tr class="text-center">
                     <td>S/N</td>
                     <td>Username</td>
                     <td>Password</td>
                     <td>Delete</td>
                     <td>Update</td>
                 </tr>
-                <tbody id="1">
+                <tbody id="1" class="text-center">
         
                 </tbody>
             </table>
@@ -212,7 +220,7 @@
                     jUsers = localStorage.getItem("cinemaInfo");
                     Customers = JSON.parse(jUsers);
                     for (i = 0; i < Customers.length; i++){
-                        b += "<tr><td>" + `${i+1}` + "</td><td>" + Customers[i].userName+ "</td><td>" +Customers[i].password+"</td><td>"+'<button onclick="deletecustomers('+i+')" class="btn btn-button bg-light"><img src="Image/trash.svg" alt="" style="width:20px; height:20px;"></button>'+"</td><td>"+'<button onclick="edit('+i+')" class="btn btn bg-light"><img src="Image/arrow-up-right.svg" alt="" style="width:15px; height: 15px;"></button>'+"</td></tr>";
+                        b += "<tr><td>" + `${i+1}` + "</td><td>" + Customers[i].userName+ "</td><td>" +Customers[i].password+"</td><td>"+'<button onclick="deletecustomers('+i+')" class="btn btn-button   bg-light p-3"><img src="Image/trash.svg" alt="" style="width:20px; height:20px;"></button>'+"</td><td>"+'<button onclick="edit('+i+')" class="btn btn-button bg-success bi bi-pencil-square p-3"></button>'+"</td></tr>";
                     }
                     document.getElementById('1').innerHTML = b;
                 }
@@ -278,8 +286,15 @@
                   user[pami].password= pword.value
                   localStorage.setItem('cinemaInfo', JSON.stringify(user))
                   alert("Saved")
-                  location.reload();
+                  location.reload();  
                 }
+
+              // this is the function for log out
+                logout=()=>{
+                  if(confirm("Are you sure?")){
+                  location.href = "admin-login-page.html"
+                }
+              }
             </script>
 
   <script src="assets/vendors/js/vendor.bundle.base.js"></script>
