--- a/template/index.html
+++ b/template/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Palms Cinema</title>
     <!-- plugins:css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css">
     <!-- endinject -->
@@ -21,6 +22,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- End layout styles -->
     <link rel="shortcut icon" href="assets/images/favicon.png" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
   <body>
     <div class="container-scroller">
@@ -74,27 +76,34 @@
             <span class="nav-link">Navigation</span>
           </li>
           <li class="nav-item menu-items">
+            <a class="nav-link" href="index.html">
+                <span class="menu-icon">
+                    <i class="mdi mdi-speedometer"></i>
+                  </span>
+              <span class="menu-title">Dashboard</span>
+            </a>
+          </li>
+          <li class="nav-item menu-items">
             <a class="nav-link" href="customer-list.html">
+              <span class="menu-icon">
+                <i class="bi bi-list-check"></i>
+              </span>
               <span class="menu-title">Customer list</span>
             </a>
           </li>
           <li class="nav-item menu-items">
             <a class="nav-link" href="staff-list.html">
+              <span class="menu-icon">
+                <i class="bi bi-list-ul"></i>
+              </span>
               <span class="menu-title">Staff list</span>
             </a>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link">
-              <span class="menu-title">Tables</span>
-            </a>
-          </li>
-          <li class="nav-item menu-items">
-              <a class="nav-link" href="#">
-                <span class="menu-title">Customer list</span>
-              </a>
-            </li>
-          <li class="nav-item menu-items">
             <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+                <span class="menu-icon">
+                    <i class="bi bi-shield-check"></i>
+                  </span>
               <span class="menu-title">User Pages</span>
               <i class="menu-arrow"></i>
             </a>
@@ -159,7 +168,7 @@
                     </div>
                   </a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item preview-item">
+                  <a class="dropdown-item preview-item" onclick="logout()">
                     <div class="preview-thumbnail">
                       <div class="preview-icon bg-dark rounded-circle">
                         <i class="mdi mdi-logout text-danger"></i>
@@ -178,7 +187,64 @@
               <span class="mdi mdi-format-line-spacing"></span>
             </button>
           </div> 
+
+          <body>
+              <div class="d-sm-flex align-items-center justify-content-between" id="noofcus" style="margin: 70px auto; padding-left:10px;">
+                  <div class="text-center py-4 bg-dark" style="border: 2px solid black; height:200px; width:300px; margin-right:20px;">
+                    NO OF CUSTOMERS <div class="h2 my-4"><i class="bi bi-people-fill" id="t1"></i></div> <br>
+                      <textarea name="" id="display" cols="" rows="" style="background:transparent; color:white; border:none;" class="text-center" disabled></textarea>
+                  </div>
           
+                  <div class="text-center py-4 bg-dark" id="noofstaff" style="border: 2px solid black; height:200px; width:300px;">
+                    NO OF STAFFS <div class="h2 my-4"><i class="bi bi-person-square" id="t2"></i></div><br>
+                      <textarea name="" id="displaystaff" cols="" rows="" style="background:transparent; color:white; border:none;" class="text-center" disabled></textarea>
+                  </div>
+              </div>
+          <script>
+              var b = "";
+              if (localStorage.cinemaInfo){
+                  jUsers = localStorage.getItem("cinemaInfo");
+                  Customers = JSON.parse(jUsers);
+                  for (i = 0; i < Customers.length; i++)
+                  {
+                      b = Customers.length;
+                      }
+                      document.getElementById('display').innerHTML = b;
+                      }
+          
+          
+              var c = "";
+              if(localStorage.staffInfo){
+                  users = localStorage.getItem("staffInfo");
+                  staff = JSON.parse(users);
+                  for (i = 0; i < staff.length; i++) {
+                      c = staff.length; 
+                      }
+                      document.getElementById('displaystaff').innerHTML = c;
+                      // location.reload();
+                      }
+              logout=()=>{
+                if(confirm("Are you sure?")){
+                  location.href = "admin-login-page.html"
+                }
+              }          
+              
+
+
+
+
+          </script>
+
+<script>
+$(document).ready(function(){
+    $("#t1").hover(function(){
+        // $("*").animate({left: '250px'});
+        // $("*").animate({top: '250px'});
+        // $("*").animate({left: '-0px'});
+        // $("*").animate({top: '-0px'});
+    });
+});
+</script>
           <script src="assets/vendors/js/vendor.bundle.base.js"></script>
           <!-- endinject -->
           <!-- Plugin js for this page -->
