--- a/template/login.html
+++ b/template/login.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Log in page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
 </head>
-<body style="background-image:url(Image/splash-screen.png)">
+<body style="background-image:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(Image/screen.png)">
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar fixed-top" style="background-color:black;">
             <div class="container">
@@ -38,33 +40,51 @@
                 </div>
             </div>
         </nav>
-   <div class="container">
-        <h1 class="text-info text-center" style="margin-top:130px;">Welcome to Palms Cinema</h1>
-       <form class="row g-3 justify-content-evenly">
-           <div class="col-md-7">
-                <label for="text" class="form-label text-light">Username</label>
-                <input type="text" name="" id="uname" class="form-control bg-dark" style="color:white;">
-           </div>
-           <div class="col-md-7">
-                <label for="text" class="form-label text-light">Password</label>
-                <input type="password" name="" id="pword" class="form-control bg-dark" style="color:white;"><input type="checkbox" onclick="myFunction()"><span class="text-light">Show password</span>
-           </div>
-       </form>
-       <!-- <div class="my-3" style="margin-left: 40vw">
-            <button onclick="login()" class="btn btn-primary" >Log in</button>
-        </div> -->
-        <div class="text-center">
-                <button type="submit" class="btn btn-primary btn-block enter-btn" style="width:47vw; background-color: #0090e7;" onclick="register()">Sign up</button>
-        </div>
-        <div class="d-flex" style="margin-left: 15vw;">
-                <button class="btn btn-danger col-4 m-4 text-light" style="background: #3b579d;">
-                <i class="mdi mdi-facebook mx-1"></i>Facebook
-                </button>
-                <button class="btn btn-secondary col-4 m-4 text-light" style="background: #dc4a38;">
-                <i class="mdi mdi-google-plus m-1"></i>Google plus 
-                </button>
-        </div>
-    </div> 
+        <div class="container-scroller" style="padding-top: 150px;">
+            <div class="container-fluid page-body-wrapper full-page-wrapper">
+              <div class="row w-100 m-0">
+                <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
+                  <div class="card col-lg-4 mx-auto" style="border:none;">
+                    <div class="card-body px-5 py-5 text-light"style="background-color:#191c24;">
+                      <h3 class="card-title text-left mb-3">Login</h3>
+                      <form>
+                        <div class="form-group">
+                          <label>Username</label>
+                          <input type="text" class="form-control p_input text-light" id="uname" style="background-color: #2A3038;border: 1px solid #2c2e33; box-shadow:none;">
+                        </div>
+                        <div class="form-group">
+                          <label>Password</label>
+                          <input type="password" class="form-control p_input text-light" id="pword" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                        </div>
+                        <div class="form-group d-flex align-items-center justify-content-between">
+                          <div class="form-check">
+                            <label class="form-check-label">
+                              <input type="checkbox" onclick="myFunction()" class="form-check-input"> Show password </label>
+                          </div>
+                          <!-- <a href="#" class="forgot-pass">Forgot password</a> -->
+                        </div>
+                      </form>
+                      <div class="text-center">
+                        <button type="submit" onclick="login()" class="btn btn-primary btn-block enter-btn my-2" style="width:26vw;">Login
+                            <i class="bi bi-laptop"></i>
+                        </button>
+                      </div>
+                      <div class="d-flex">
+                          <button class="btn btn-facebook col mx-2 my-2 text-light" style="background: #3b579d;">
+                              <i class="mdi mdi-facebook"></i> Facebook </button>
+                          <button class="btn btn-google col text-light my-2" style="background: #dc4a38;">
+                              <i class="mdi mdi-google-plus"></i> Google plus </button>
+                      </div>
+                      <p class="sign-up text-center">Don't have an Account?<a href="#"> Sign Up</a></p>
+                    </div>
+                  </div>
+                </div>
+                <!-- content-wrapper ends -->
+              </div>
+              <!-- row ends -->
+            </div>
+            <!-- page-body-wrapper ends -->
+          </div>
 
    <script>
        uname.focus();
