--- a/template/registration-page.html
+++ b/template/registration-page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Registration form</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="style.css">
@@ -40,46 +41,64 @@
             </div>
         </div>
     </nav>
-    <h1 class="text-info text-center" style="margin-top:130px;">Welcome to Palms Cinema</h1>
-    <div class="container my-4">
-        <form class="row g-3">
-            <div class="col-md-6">
-                <label for="" class="form-label text-light">Firstname</label>
-                <input type="text" class="form-control bg-dark" id="t1" style="color:white;">
+    <div class="container-scroller text-light" style="padding-top: 100px;">
+            <div class="container-fluid page-body-wrapper full-page-wrapper">
+              <div class="row w-100 m-0">
+                <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
+                  <div class="card col-lg-4 mx-auto" style="border:none;">
+                    <div class="card-body px-5 py-5" style="background-color:#191c24;">
+                      <h3 class="card-title text-left mb-3">Register</h3>
+                      <form>
+                        <div class="form-group">
+                          <label>First name</label>
+                          <input type="text" class="form-control p_input text-light" id="t1" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                        </div>
+                        <div class="form-group">
+                          <label>Lastname</label>
+                          <input type="text" class="form-control p_input text-light" id="t2" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                        </div>
+                        <div class="form-group">
+                            <label>Email</label>
+                            <input type="email" class="form-control p_input text-light" id="t4" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                        </div>
+                        <div class="form-group">
+                            <label>Username</label>
+                            <input type="text" class="form-control p_input text-light" id="t6" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                        </div>
+                        <div class="form-group">
+                          <label>Password</label>
+                          <input type="password" class="form-control p_input text-light" id="t7" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                        </div>
+                        <div class="form-group d-flex align-items-center justify-content-between">
+                          <div class="form-check">
+                            <label class="form-check-label">
+                              <input type="checkbox" class="form-check-input" onclick="myFunction()">Show password</label>
+                          </div>
+                          <!-- <a href="#" class="forgot-pass">Forgot password</a> -->
+                        </div>
+                      </form>
+                      <div class="text-center">
+                            <button type="submit" class="btn btn-primary btn-block enter-btn my-2" style="width:25vw;" onclick="register()">Sign up
+                                <i class="bi bi-laptop"></i>
+                            </button>
+                          </div>
+                          <div class="d-flex">
+                            <button class="btn btn-facebook col mx-2 my-2 text-light" style="background: #3b579d;">
+                              <i class="mdi mdi-facebook"></i>Facebook</button>
+                            <button class="btn btn-google col text-light my-2" style="background: #dc4a38;">
+                              <i class="mdi mdi-google-plus"></i>Google plus</button>
+                          </div>
+                          <p class="sign-up text-center">Already have an Account?<a href="login.html"> Log in</a></p>
+                          <p class="terms text-center" style="width:100%; font-size:14.2px">By creating an account you are accepting our<a href="#"> Terms & Conditions</a></p>
+                    </div>
+                  </div>
+                </div>
+                <!-- content-wrapper ends -->
+              </div>
+              <!-- row ends -->
             </div>
-            <div class="col-md-6">
-                <label for="" class="form-label text-light">Lastname</label>
-               <input type="text" class="form-control bg-dark" id="t2" style="color:white;">
-            </div>
-            <div class="col-12">
-                <label for="" class="form-label text-light">Email address</label>
-                <input type="text" class="form-control bg-dark" id="t4" style="color:white;">
-            </div>
-            <div class="col-12">
-                <label for="" class="form-label text-light">Phone number</label>
-                <input type="number" class="form-control bg-dark" id="t5" style="color:white;">
-            </div>
-            <div class="col-md-6">
-                <label for="" class="form-label text-light">Username</label>
-                <input type="text" class="form-control bg-dark" id="t6" style="color:white;">
-            </div>
-            <div class="col-md-6">
-                <label for="" class="form-label text-light">Password</label>
-                <input type="password" class="form-control bg-dark" id="t7" style="color:white;"><input type="checkbox" onclick="myFunction()"> <span class="text-light">Show password</span>
-            </div>
-        </form>
-        <div class="text-center">
-            <button type="submit" class="btn btn-primary btn-block enter-btn" style="width:81vw; background-color: #0090e7;" onclick="register()">Sign up</button>
-        </div>
-        <div class="d-flex">
-            <button class="btn btn-danger col m-4 text-light" style="background: #3b579d;">
-            <i class="mdi mdi-facebook mx-1"></i>Facebook
-            </button>
-            <button class="btn btn-secondary col m-4 text-light" style="background: #dc4a38;">
-            <i class="mdi mdi-google-plus m-1"></i>Google plus 
-            </button>
-        </div>
-    </div>
+            <!-- page-body-wrapper ends -->
+          </div>
     <script>
         var arr = [];
         t1.focus();
@@ -96,10 +115,6 @@
             else if(t4.value == ""){
                 alert("Input your email address");
                 t4.focus();
-            }
-            else if(t5.value == ""){
-                alert("Input your Phone number");
-                t5.focus();
             }
             else if(t6.value == ""){
                 alert("Input your username");
@@ -121,11 +136,10 @@
                 t1.value = "";
                 t2.value = "";
                 t4.value = "";
-                t5.value = "";
                 t6.value = "";
                 t7.value = "";
                 alert("Account Created")
-                location.href =  'login.html'
+                location.href = 'login.html'
             }
         }
         myFunction=()=>{
