--- a/template/Home-page.html
+++ b/template/Home-page.html
@@ -179,8 +179,8 @@
         </div>
     </section>
     
-    <footer class="p-2 bg-dark text-white text-center position-relative">
-        <div class=" container d-flex pt-5" style="display:flex; justify-content:center;">
+    <footer class="p-5 bg-dark text-white text-center position-relative" >
+        <div class=" container d-flex" style="display:flex; justify-content:center;">
             <a href="login.html">
                 <span class="icon mx-5 h4">
                     <i class="bi bi-facebook"></i>
@@ -221,7 +221,13 @@
                         <a href="" class="text-info">Terms & Conditions</a>
                     </li>
                 </ul>
-                <p class="">Copyright &copy; 2022 Palms Cinema</p>
+                <div class="container">
+                    <p class="">Copyright &copy; 2022 Palms Cinema</p>
+
+                    <a href="" class="position-absolute button-0 end-0">
+                        <i class="bi bi-arrow-up-circle h1"></i>
+                    </a>
+                </div>
             </div>
     </footer>
 
