--- a/template/index.html
+++ b/template/index.html
@@ -236,14 +236,24 @@
           </script>
 
 <script>
-$(document).ready(function(){
-    $("#t1").hover(function(){
-        // $("*").animate({left: '250px'});
-        // $("*").animate({top: '250px'});
-        // $("*").animate({left: '-0px'});
-        // $("*").animate({top: '-0px'});
-    });
-});
+// $(document).ready(function(){
+//     $("#t1").hover(function(){
+//         $("*").animate({left: '250px'});
+//         $("*").animate({top: '250px'});
+//         $("*").animate({left: '-0px'});
+//         $("*").animate({top: '-0px'});
+//     });
+// });
+// $(document).ready(function(){
+//     $("#t1").hover(function(){
+//         $("*").animate({
+//             left: '250px',
+//             opacity: '0.5',
+//             height: '150px',
+//             width: '150px'
+//         });
+//     });
+// });
 </script>
           <script src="assets/vendors/js/vendor.bundle.base.js"></script>
           <!-- endinject -->
