--- a/template/admin-reg-page.html
+++ b/template/admin-reg-page.html
@@ -27,7 +27,7 @@
                         <a href="Home-page.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item mx-4">
-                        <a href="#questons" class="nav-link">Contact Us</a>
+                        <a href="contact.html" class="nav-link">Contact Us</a>
                     </li>
                     <li class="nav-item mx-4">
                         <a href="registration-page.html" class="nav-link">Sign Up</a>
