--- a/template/admin.html
+++ b/template/admin.html
@@ -76,9 +76,9 @@
             <span class="nav-link">Navigation</span>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="admin.html">
                 <span class="menu-icon">
-                    <i class="mdi mdi-speedometer"></i>
+                    <i class="bi bi-house"></i>
                   </span>
               <span class="menu-title">Dashboard</span>
             </a>
@@ -100,6 +100,22 @@
             </a>
           </li>
           <li class="nav-item menu-items">
+            <a class="nav-link" href="message.html">
+              <span class="menu-icon">
+                <i class="bi bi-envelope-open"></i>
+              </span>
+              <span class="menu-title">Message</span>
+            </a>
+          </li>
+          <li class="nav-item menu-items">
+            <a class="nav-link" href="chair.html">
+              <span class="menu-icon">
+                <i class="bi bi-sort-up"></i>
+              </span>
+              <span class="menu-title">Arrange Chair</span>
+            </a>
+          </li>
+          <li class="nav-item menu-items">
             <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
                 <span class="menu-icon">
                     <i class="bi bi-shield-check"></i>
@@ -118,79 +134,79 @@
           </li>
         </ul>
       </nav>
-      <!-- partial -->
-      <div class="container-fluid page-body-wrapper">
-        <!-- partial:partials/_navbar.html -->
-        <nav class="navbar p-0 fixed-top d-flex flex-row">
-          <div class="navbar-brand-wrapper d-flex d-lg-none align-items-center justify-content-center">
-            <a class="navbar-brand brand-logo-mini" href="index.html"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
-          </div>
-          <div class="navbar-menu-wrapper flex-grow d-flex align-items-stretch">
-            <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
-              <span class="mdi mdi-menu"></span>
-            </button>
-            <ul class="navbar-nav w-100">
-              <li class="nav-item w-100">
-                <form class="nav-link mt-2 mt-md-0 d-none d-lg-flex search">
-                  <input type="text" class="form-control" placeholder="Search">
-                </form>
-              </li>
-              <li class="nav-item">
-                  <a href="Home-page.html" class="nav-link">Home</a>
-              </li>
-              <li class="nav-item" style="margin: 0px 30px;">
-                  <a href="" class="nav-link">Hall</a>
-              </li>
-            </ul>
-            <ul class="navbar-nav navbar-nav-right">
-              <li class="nav-item dropdown d-none d-lg-block">
-                <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="createbuttonDropdown">
-                </div>
-              <li class="nav-item dropdown">
-                <a class="nav-link" id="profileDropdown" href="#" data-toggle="dropdown">
-                  <div class="navbar-profile">
-                    <img class="img-xs rounded-circle" src="assets/images/faces/face17.jpg" alt="">
-                    <p class="mb-0 d-none d-sm-block navbar-profile-name">Aluko Oluwapamilerin</p>
-                    <i class="mdi mdi-menu-down d-none d-sm-block"></i>
-                  </div>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="profileDropdown">
-                  <h6 class="p-3 mb-0">Profile</h6>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item preview-item">
-                    <div class="preview-thumbnail">
-                      <div class="preview-icon bg-dark rounded-circle">
-                        <i class="mdi mdi-settings text-success"></i>
+          <!-- partial -->
+          <div class="container-fluid page-body-wrapper">
+            <!-- partial:partials/_navbar.html -->
+            <nav class="navbar p-0 fixed-top d-flex flex-row">
+              <div class="navbar-brand-wrapper d-flex d-lg-none align-items-center justify-content-center">
+                <a class="navbar-brand brand-logo-mini" href="index.html"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
+              </div>
+              <div class="navbar-menu-wrapper flex-grow d-flex align-items-stretch">
+                <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
+                  <span class="mdi mdi-menu"></span>
+                </button>
+                <ul class="navbar-nav w-100">
+                  <li class="nav-item w-100">
+                    <form class="nav-link mt-2 mt-md-0 d-md-flex search">
+                      <input type="text" class="form-control" id="myInput" placeholder="Search">
+                    </form>
+                  </li>
+                  <li class="nav-item">
+                      <a href="index.html" class="nav-link">Home</a>
+                  </li>
+                  <li class="nav-item" style="margin: 0px 30px;">
+                      <a href="Hall.html" class="nav-link">Hall</a>
+                  </li>
+                </ul>
+                <ul class="navbar-nav navbar-nav-right">
+                  <li class="nav-item dropdown d-none d-lg-block">
+                    <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="createbuttonDropdown">
+                    </div>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link" id="profileDropdown" href="#" data-toggle="dropdown">
+                      <div class="navbar-profile">
+                        <img class="img-xs rounded-circle" src="assets/images/faces/face17.jpg" alt="">
+                        <p class="mb-0 d-none d-sm-block navbar-profile-name">Aluko Oluwapamilerin</p>
+                        <i class="mdi mdi-menu-down d-none d-sm-block"></i>
                       </div>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="profileDropdown">
+                      <h6 class="p-3 mb-0">Profile</h6>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item preview-item">
+                        <div class="preview-thumbnail">
+                          <div class="preview-icon bg-dark rounded-circle">
+                            <i class="mdi mdi-settings text-success"></i>
+                          </div>
+                        </div>
+                        <div class="preview-item-content">
+                          <p class="preview-subject mb-1">Settings</p>
+                        </div>
+                      </a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item preview-item" onclick="logout()">
+                        <div class="preview-thumbnail">
+                          <div class="preview-icon bg-dark rounded-circle">
+                            <i class="mdi mdi-logout text-danger"></i>
+                          </div>
+                        </div>
+                        <div class="preview-item-content">
+                          <p class="preview-subject mb-1">Log out</p>
+                        </div>
+                      </a>
+                      <div class="dropdown-divider"></div>
+                      <p class="p-3 mb-0 text-center">Advanced settings</p>
                     </div>
-                    <div class="preview-item-content">
-                      <p class="preview-subject mb-1">Settings</p>
-                    </div>
-                  </a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item preview-item" onclick="logout()">
-                    <div class="preview-thumbnail">
-                      <div class="preview-icon bg-dark rounded-circle">
-                        <i class="mdi mdi-logout text-danger"></i>
-                      </div>
-                    </div>
-                    <div class="preview-item-content">
-                      <p class="preview-subject mb-1">Log out</p>
-                    </div>
-                  </a>
-                  <div class="dropdown-divider"></div>
-                  <p class="p-3 mb-0 text-center">Advanced settings</p>
-                </div>
-              </li>
-            </ul> 
-            <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
-              <span class="mdi mdi-format-line-spacing"></span>
-            </button>
-          </div> 
+                  </li>
+                </ul> 
+                <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
+                  <span class="mdi mdi-format-line-spacing"></span>
+                </button>
+              </div>  
 
           <body>
-              <div class="d-sm-flex align-items-center justify-content-between" id="noofcus" style="margin: 70px auto; padding-left:10px;">
-                  <div class="text-center py-4 bg-dark" style="border: 2px solid black; height:200px; width:300px; margin-right:20px;">
+              <div class="d-sm-flex align-items-center justify-content-between"  style="margin: 70px auto; padding-left:10px;">
+                  <div class="text-center py-4 bg-dark" id="noofcus" style="border: 2px solid black; height:200px; width:300px; margin-right:20px;">
                     NO OF CUSTOMERS <div class="h2 my-4"><i class="bi bi-people-fill" id="t1"></i></div> <br>
                       <textarea name="" id="display" cols="" rows="" style="background:transparent; color:white; border:none;" class="text-center" disabled></textarea>
                   </div>
@@ -200,6 +216,9 @@
                       <textarea name="" id="displaystaff" cols="" rows="" style="background:transparent; color:white; border:none;" class="text-center" disabled></textarea>
                   </div>
               </div>
+
+
+              <!-- this is the function for no of customer and staff -->
           <script>
               var b = "";
               if (localStorage.cinemaInfo){
@@ -219,60 +238,54 @@
                   staff = JSON.parse(users);
                   for (i = 0; i < staff.length; i++) {
                       c = staff.length; 
-                      }
-                      document.getElementById('displaystaff').innerHTML = c;
-                      // location.reload();
-                      }
+                  }
+                  document.getElementById('displaystaff').innerHTML = c;
+                  // location.reload();
+                }
+
+              
               logout=()=>{
                 if(confirm("Are you sure?")){
                   location.href = "admin-login-page.html"
                 }
-              }          
-              
-
-
-
-
+              } 
           </script>
 
 <script>
-// $(document).ready(function(){
-//     $("#t1").hover(function(){
-//         $("*").animate({left: '250px'});
-//         $("*").animate({top: '250px'});
-//         $("*").animate({left: '-0px'});
-//         $("*").animate({top: '-0px'});
-//     });
-// });
-// $(document).ready(function(){
-//     $("#t1").hover(function(){
-//         $("*").animate({
-//             left: '250px',
-//             opacity: '0.5',
-//             height: '150px',
-//             width: '150px'
-//         });
-//     });
-// });
+$(document).ready(function(){
+    $("#t1").hover(function(){
+        $("#noofcus").animate({
+            opacity: '0.1',
+        });
+    });
+    $("#t2").hover(function(){
+        $("#noofstaff").animate({
+            opacity: '0.1',
+        });
+    });
+    $("#t1").hover(function(){
+        $("#noofcus").animate({
+            opacity: '0.8',
+        });
+    });
+    $("#t2").hover(function(){
+        $("#noofstaff").animate({
+            opacity: '0.8',
+        });
+    });
+});
 </script>
-          <script src="assets/vendors/js/vendor.bundle.base.js"></script>
-          <!-- endinject -->
-          <!-- Plugin js for this page -->
-          <script src="assets/vendors/chart.js/Chart.min.js"></script>
-          <script src="assets/vendors/progressbar.js/progressbar.min.js"></script>
-          <script src="assets/vendors/jvectormap/jquery-jvectormap.min.js"></script>
-          <script src="assets/vendors/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-          <script src="assets/vendors/owl-carousel-2/owl.carousel.min.js"></script>
-          <!-- End plugin js for this page -->
-          <!-- inject:js -->
-          <script src="assets/js/off-canvas.js"></script>
-          <script src="assets/js/hoverable-collapse.js"></script>
-          <script src="assets/js/misc.js"></script>
-          <script src="assets/js/settings.js"></script>
-          <script src="assets/js/todolist.js"></script>
-          <!-- endinject -->
-          <!-- Custom js for this page -->
-          <script src="assets/js/dashboard.js"></script>
-          <!-- End custom js for this page -->
+  <script src="assets/vendors/js/vendor.bundle.base.js"></script>
+  <script src="assets/vendors/chart.js/Chart.min.js"></script>
+  <script src="assets/vendors/progressbar.js/progressbar.min.js"></script>
+  <script src="assets/vendors/jvectormap/jquery-jvectormap.min.js"></script>
+  <script src="assets/vendors/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+  <script src="assets/vendors/owl-carousel-2/owl.carousel.min.js"></script>
+  <script src="assets/js/off-canvas.js"></script>
+  <script src="assets/js/hoverable-collapse.js"></script>
+  <script src="assets/js/misc.js"></script>
+  <script src="assets/js/settings.js"></script>
+  <script src="assets/js/todolist.js"></script>
+  <script src="assets/js/dashboard.js"></script>
   </body> 
 </html>
