--- a/template/index.html
+++ b/template/index.html
@@ -7,7 +7,7 @@
     <title>Palms Cinema</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="home.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
     <!-- Nav bar -->
@@ -22,10 +22,10 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item mx-4">
-                        <a href="Home-page.html" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item mx-4">
-                        <a href="#questons" class="nav-link">Contact Us</a>
+                        <a href="contact.html" class="nav-link">Contact Us</a>
                     </li>
                     <li class="nav-item mx-4">
                         <a href="registration-page.html" class="nav-link">Sign Up</a>
@@ -34,13 +34,12 @@
                             <a href="login.html" class="nav-link">Log In</a>
                     </li>
                     <li class="nav-item mx-4">
-                            <a href="admin-login-page.html" class="nav-link">Admin</a>
+                            <a class="nav-link" data-toggle="tooltip" title="Only for Admin!" onclick="hide()">Admin</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
     <!--Body-->
     <section class="bg-dark text-light p-5 text-center" style="height:90vh;">
         <div class="container" style="padding-top: 120px;">
@@ -104,7 +103,7 @@
                 </div>
             </div>
             <div class="container">
-                <p class="lead text-center" style="color:#d4d4d4; font-size:18px; line-height:25px;">
+                <p class=" text-center" style="color:#d4d4d4;  line-height:25px;">
                     An immense explosion. A whisper heard over your shoulder. The rumbling bass you feel instead of hear. The combination of our perfectly tuned integrated sound system and our precise speaker orientation ensures you can hear a pin drop and be able to tell exactly where it landed. Every note of the soundtrack and every scuff of a shoe is clearer in Palms Cinema, with a complete overhaul of each movie’s audio overseen by the film’s director. All of this pristine sound is then pumped into the cinema that has been customized for an optimal experience.
                 </p>
             </div>
@@ -141,7 +140,7 @@
                 </div>
             </div>
 
-            <p class="lead text-center" style="color:#d4d4d4; font-size:18px; line-height:25px;">
+            <p class="text-center" style="color:#d4d4d4; line-height:25px;">
                     Clarity, detail and size make Palms Cinema more than a cinema. Our remastering process fully transforms every frame of a film to produce the best possible version of a filmmaker’s vision. Two projectors run simultaneously to provide the perfect image with a balance of warmth and sharpness. Palms Cinema draws you into something as close to reality as you have ever experienced.
             </p>
         </div>
@@ -173,37 +172,34 @@
                 </div>
             </div>
 
-            <p class="lead text-center" style="color:#d4d4d4; font-size:18px;line-height:25px;">
+            <p class="text-center" style="color:#d4d4d4; line-height:25px;">
                 Movies are watched. But seeing a movie at Palms® Cinema is so much more. That’s what we call The Palms Experience®. Every element in our Cinema is planned,designed and positioned with exacting standards to create the most intense experience. This science is our Cinema geometry, and it ensures movie magic every time the lights go down.
             </p>
         </div>
     </section>
     
-    <footer class="p-5 bg-dark text-white text-center position-relative" >
-        <div class=" container d-flex" style="display:flex; justify-content:center;">
-            <a href="login.html">
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+        <div class=" container" style="display:flex; justify-content:center;">
+            <a href="">
                 <span class="icon mx-5 h4">
                     <i class="bi bi-facebook"></i>
                 </span>
             </a>
-            <a href="login.html">
+            <a href="">
                 <span class="icon h4">
                     <i class="bi bi-twitter"></i>
                 </span>
             </a>
-            <a href="login.html">
+            <a href="">
                 <span class="icon mx-5 h4">
                     <i class="bi bi-instagram"></i>
                 </span>
             </a>
-            <a href="login.html">
+            <a href="">
                 <span class="icon h4">
                     <i class="bi bi-youtube"></i>
                 </span>
             </a>
-
-              <!-- <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
-              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrap admin templates</a> from Bootstrapdash.com</span> -->
             </div>
 
             <div class="container text-center">
@@ -223,36 +219,46 @@
                 </ul>
                 <div class="container">
                     <p class="">Copyright &copy; 2022 Palms Cinema</p>
-
+<!-- 
                     <a href="" class="position-absolute button-0 end-0">
                         <i class="bi bi-arrow-up-circle h1"></i>
-                    </a>
+                    </a> -->
                 </div>
             </div>
     </footer>
+    <script>
+        hide=()=>{
+            var pass = prompt("Input password")
+            if(pass == "chicken"){
+                alert("Welcome Sir")
+                location.href="admin.html"
+                }
+               else{
+                 location.href="index.html"
+  
+                 alert("Only Admin allowed")
+  
+               }
+              }
 
+              $(document).ready(function(){
+                $('[data-toggle="tooltip"]').tooltip();
+                });
+
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- container-scroller -->
-    <!-- plugins:js -->
     <script src="assets/vendors/js/vendor.bundle.base.js"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
     <script src="assets/vendors/chart.js/Chart.min.js"></script>
     <script src="assets/vendors/progressbar.js/progressbar.min.js"></script>
     <script src="assets/vendors/jvectormap/jquery-jvectormap.min.js"></script>
     <script src="assets/vendors/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
     <script src="assets/vendors/owl-carousel-2/owl.carousel.min.js"></script>
-    <!-- End plugin js for this page -->
-    <!-- inject:js -->
     <script src="assets/js/off-canvas.js"></script>
     <script src="assets/js/hoverable-collapse.js"></script>
     <script src="assets/js/misc.js"></script>
     <script src="assets/js/settings.js"></script>
     <script src="assets/js/todolist.js"></script>
-    <!-- endinject -->
-    <!-- Custom js for this page -->
     <script src="assets/js/dashboard.js"></script>
-    <!-- End custom js for this page -->
 </body>
 </html>
