--- a/template/login.html
+++ b/template/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body style="background-image:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(Image/screen.png)">
     <!-- Nav bar -->
@@ -22,10 +23,10 @@
                 <div class="collapse navbar-collapse" id="navmenu">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-4">
-                            <a href="Home-page.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item mx-4">
-                            <a href="#questons" class="nav-link">Contact Us</a>
+                            <a href="contact.html" class="nav-link">Contact Us</a>
                         </li>
                         <li class="nav-item mx-4">
                             <a href="registration-page.html" class="nav-link">Sign Up</a>
@@ -34,7 +35,7 @@
                                 <a href="login.html" class="nav-link">Log In</a>
                         </li>
                         <li class="nav-item mx-4">
-                                <a href="admin-login-page.html" class="nav-link">Admin</a>
+                                <a class="nav-link" data-toggle="tooltip" title="Only for Admin!" onclick="hide()">Admin</a>
                         </li>
                     </ul>
                 </div>
@@ -94,7 +95,7 @@
             var found = myArray.find((val, i)=>val.userName == uname.value && val.password == pword.value)
             if (found) {
                 alert("Login successful")
-                location.href =  'casr.html'
+                location.href =  'Hall.html'
             } else {
                 alert ("Invalid username and password")
                 uname.focus();
@@ -112,6 +113,24 @@
             }
         }
    </script>
+    <script>
+        hide=()=>{
+            var pass = prompt("Input password")
+            if(pass == "chicken"){
+                alert("Welcome Sir")
+                location.href="admin.html"
+                }
+               else{
+                 location.href="login.html"
+  
+                 alert("Only Admin allowed")
+  
+               }
+              }
+              $(document).ready(function(){
+                $('[data-toggle="tooltip"]').tooltip();
+                });
+    </script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
    <script src="assets/vendors/js/vendor.bundle.base.js"></script>
    <!-- endinject -->
