--- a/template/registration-page.html
+++ b/template/registration-page.html
@@ -7,6 +7,7 @@
     <title>Registration form</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -23,10 +24,10 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item mx-4">
-                        <a href="Home-page.html" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item mx-4">
-                        <a href="#questons" class="nav-link">Contact Us</a>
+                        <a href="contact.html" class="nav-link">Contact Us</a>
                     </li>
                     <li class="nav-item mx-4">
                         <a href="registration-page.html" class="nav-link">Sign Up</a>
@@ -35,13 +36,13 @@
                             <a href="login.html" class="nav-link">Log In</a>
                     </li>
                     <li class="nav-item mx-4">
-                            <a href="admin-login-page.html" class="nav-link">Admin</a>
+                            <a class="nav-link" data-toggle="tooltip" title="Only for Admin!"onclick="hide()">Admin</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container-scroller text-light" style="padding-top: 100px;">
+    <div class="container-scroller text-light" style="padding-top: 80px;">
             <div class="container-fluid page-body-wrapper full-page-wrapper">
               <div class="row w-100 m-0">
                 <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
@@ -63,7 +64,8 @@
                         </div>
                         <div class="form-group">
                             <label>Username</label>
-                            <input type="text" class="form-control p_input text-light" id="t6" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                            <input type="text" class="form-control text-light" onkeyup="search()" id="t6" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                            <p style="font-size: 13px;" id="info"></p>
                         </div>
                         <div class="form-group">
                           <label>Password</label>
@@ -103,6 +105,8 @@
         var arr = [];
         t1.focus();
         arr = localStorage.cinemaInfo ? JSON.parse(localStorage.cinemaInfo) : arr=[]
+        let customer = JSON.stringify(localStorage.cinemaInfo);
+        let myCustomer = JSON.parse(localStorage.cinemaInfo);
         register=()=> {
             if (t1.value == "") {
                 alert("Input your First name");
@@ -151,6 +155,35 @@
                 y.type = "password";
             }
         }
+
+        search=()=>{
+            var found = myCustomer.find((val, i)=>val.userName == t6.value)
+            if (found){
+                info.innerHTML = "Username not available <i class='bi bi-exclamation-triangle text-danger mx-1'></i>"
+                t6.focus();
+            }
+            else{
+                info.innerHTML = "Username available <i class='bi bi-check-circle text-success mx-1'></i>"
+            }
+        }
+    </script>
+    <script>
+        hide=()=>{
+            var pass = prompt("Input password")
+            if(pass == "chicken"){
+                alert("Welcome Sir")
+                location.href="admin.html"
+                }
+               else{
+                 location.href="registration-page.html"
+  
+                 alert("Only Admin allowed")
+  
+               }
+              }
+              $(document).ready(function(){
+                $('[data-toggle="tooltip"]').tooltip();
+                });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <!-- container-scroller -->
