--- a/template/message.html
+++ b/template/message.html
@@ -41,11 +41,11 @@
                 <a href="#" class="dropdown-item preview-item">
                   <div class="preview-thumbnail">
                     <div class="preview-icon bg-dark rounded-circle">
-                      <i class="mdi mdi-settings text-primary"></i>
+                      <i class="mdi mdi-logout text-danger"></i>
                     </div>
                   </div>
                   <div class="preview-item-content">
-                    <p class="preview-subject ellipsis mb-1 text-small">Hall setting</p>
+                    <p class="preview-subject ellipsis mb-1 text-small">Log out</p>
                   </div>
                 </a>
                 <div class="dropdown-divider"></div>
