--- a/template/contact.html
+++ b/template/contact.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</head>
+    <link rel="stylesheet" href="style.css">
+  </head>
 <body style="background-color: #e8e8e8;" class="bg-dark">
       <!-- Nav bar -->
       <nav class="navbar navbar-expand-lg navbar-dark navbar fixed-top" style="background-color:black;">
@@ -41,12 +42,12 @@
           </div>
       </nav>
 
-    <div class="container-scroller" style="padding-top: 100px;">
+    <div class="container-scroller message-container" style="padding-top: 100px;">
         <div class="container-fluid page-body-wrapper full-page-wrapper">
           <div class="row w-100 m-0">
             <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
-              <div class="card col-lg-4 mx-auto" style="border:none;">
-                <div class="card-body px-5 py-5">
+              <div class="card message-card col-lg-4 mx-auto" style="border:none;">
+                <div class="card-body card-body2 px-5 py-5">
                   <h3 class="card-title text-left mb-3">Contact Us</h3>
                   
                   <form>
