--- a/template/index.html
+++ b/template/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar fixed-top" style="background-color:black;">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar fixed-top navbar" id="navbar" style="background-color:black;">
         <div class="container">
-            <a href="#" class="navbar-brand">Palms Cinema</a>
+            <a class="navbar-brand">Palms Cinema</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
@@ -41,9 +42,8 @@
         </div>
     </nav>
     <!--Body-->
-    <section class="bg-dark text-light p-5 text-center" style="height:90vh;">
-        <div class="container" style="padding-top: 120px;">
-            <div class="d-sm-flex align-items-center justify-content-between">
+    <section class="bg-dark text-light text-center home-container" style="height:90vh;">
+            <div class="container home-page d-sm-flex align-items-center justify-content-between" style="padding-top: 15vh;">
                 <div style="margin-top:20px;">
                     <h1>Welcome to <span class="text-danger">
                         Palms Cinema
@@ -178,8 +178,8 @@
         </div>
     </section>
     
-    <footer class="p-5 bg-dark text-white text-center position-relative">
-        <div class=" container" style="display:flex; justify-content:center;">
+    <footer class="p-5 bg-dark text-white text-center position-relative footer">
+        <div class=" container social" style="display:flex; justify-content:center;">
             <a href="">
                 <span class="icon mx-5 h4">
                     <i class="bi bi-facebook"></i>
@@ -200,31 +200,30 @@
                     <i class="bi bi-youtube"></i>
                 </span>
             </a>
-            </div>
+        </div>
 
-            <div class="container text-center">
-                <ul class="list-unstyled d-flex my-4" style="justify-content:center;">
-                    <li class="mx-3">
-                        <a href="" class="text-info">About Us</a>
-                    </li>                    
-                    <li class="mx-3">
-                        <a href="" class="text-info">Cookies Policy</a>
-                    </li>
-                    <li class="mx-3">
-                        <a href="" class="text-info">Privacy</a>
-                    </li>
-                    <li class="">
-                        <a href="" class="text-info">Terms & Conditions</a>
-                    </li>
-                </ul>
-                <div class="container">
-                    <p class="">Copyright &copy; 2022 Palms Cinema</p>
-<!-- 
-                    <a href="" class="position-absolute button-0 end-0">
-                        <i class="bi bi-arrow-up-circle h1"></i>
-                    </a> -->
-                </div>
+        <div class="container text-center ">
+            <ul class="list-unstyled d-flex my-4 footer-link" style="justify-content:center;">
+                <li class="mx-3">
+                    <a href="" class="text-info">About Us</a>
+                </li>                    
+                <li class="mx-3">
+                    <a href="" class="text-info">Cookies Policy</a>
+                </li>
+                <li class="mx-3">
+                    <a href="" class="text-info">Privacy</a>
+                </li>
+                <li class="">
+                    <a href="" class="text-info">Terms & Conditions</a>
+                </li>
+            </ul>
+            <div class="container footer-end">
+                <p class="">Copyright &copy; 2022 Palms Cinema</p>
             </div>
+            <a href="" class="position-absolute button-0 end-0">
+                <i class="bi bi-arrow-up-circle h2 p-2"></i>
+            </a>
+        </div>
     </footer>
     <script>
         hide=()=>{
@@ -234,10 +233,8 @@
                 location.href="admin.html"
                 }
                else{
-                 location.href="index.html"
-  
-                 alert("Only Admin allowed")
-  
+                   alert("Only Admin allowed")
+                   location.href="index.html"
                }
               }
 
