--- a/template/login.html
+++ b/template/login.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</head>
+    <link rel="stylesheet" href="style.css">
+  </head>
 <body style="background-image:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(Image/screen.png)">
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar fixed-top" style="background-color:black;">
@@ -41,32 +42,29 @@
                 </div>
             </div>
         </nav>
-        <div class="container-scroller" style="padding-top: 150px;">
+        <div class="container-scroller signup" style="padding-top: 150px;">
             <div class="container-fluid page-body-wrapper full-page-wrapper">
               <div class="row w-100 m-0">
                 <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
                   <div class="card col-lg-4 mx-auto" style="border:none;">
-                    <div class="card-body px-5 py-5 text-light"style="background-color:#191c24;">
+                    <div class="card-body card-body1 px-5 py-5 text-light"style="background-color:#191c24;">
                       <h3 class="card-title text-left mb-3">Login</h3>
                       <form>
                         <div class="form-group">
                           <label>Username</label>
                           <input type="text" class="form-control p_input text-light" id="uname" style="background-color: #2A3038;border: 1px solid #2c2e33; box-shadow:none;">
                         </div>
-                        <div class="form-group">
+                        <div class="">
                           <label>Password</label>
-                          <input type="password" class="form-control p_input text-light" id="pword" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
-                        </div>
-                        <div class="form-group d-flex align-items-center justify-content-between">
-                          <div class="form-check">
-                            <label class="form-check-label">
-                              <input type="checkbox" onclick="myFunction()" class="form-check-input"> Show password </label>
-                          </div>
-                          <!-- <a href="#" class="forgot-pass">Forgot password</a> -->
+                          <div class="d-flex align-items-center justify-content-between" style="height: 40px; background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none; border-radius: 4px;">
+                            <input type="password" class="text-light" id="pword" style="border-radius: 0%; border: none; outline: none; background-color: #2A3038; width: 95%;">
+                            <span id="eye" style="background-color: #2A3038; padding-right: 5px;"><i onclick="myFunction()" class="bi bi-eye"></i></span>
+                            <span id="closedeye" style="background-color: #2A3038; padding-right: 5px; display: none;"><i onclick="myFunction()" class="bi bi-eye-slash"></i></span>
+
                         </div>
                       </form>
                       <div class="text-center">
-                        <button type="submit" onclick="login()" class="btn btn-primary btn-block enter-btn my-2" style="width:26vw;">Login
+                        <button type="submit" onclick="login()" class="btn btn-primary btn-block enter-btn mt-4" style="width:26vw;">Login
                             <i class="bi bi-laptop"></i>
                         </button>
                       </div>
@@ -76,7 +74,7 @@
                           <button class="btn btn-google col text-light my-2" style="background: #dc4a38;">
                               <i class="mdi mdi-google-plus"></i> Google plus </button>
                       </div>
-                      <p class="sign-up text-center">Don't have an Account?<a href="#"> Sign Up</a></p>
+                      <p class="sign-up text-center">Don't have an Account?<a href="registration-page.html"> Sign Up</a></p>
                     </div>
                   </div>
                 </div>
@@ -104,14 +102,20 @@
             pword.value = "";
         }
         myFunction=()=>{
-            var x = document.getElementById("pword");
-            if (x.type === "password") {
-                x.type = "text";
+            var y = document.getElementById("pword");
+            if (y.type === "password") {
+                y.type = "text";
+                document.getElementById("closedeye").style.display = "block"
+                document.getElementById("eye").style.display = "none"
+
             } 
             else {
-                x.type = "password";
+                y.type = "password";
+                document.getElementById("eye").style.display = "block"
+                document.getElementById("closedeye").style.display = "none"
             }
         }
+
    </script>
     <script>
         hide=()=>{
