--- a/template/registration-page.html
+++ b/template/registration-page.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body style="background-image:url(Image/splash-screen.png)">
     <!-- Nav bar -->
@@ -42,7 +42,7 @@
             </div>
         </div>
     </nav>
-    <div class="container-scroller text-light" style="padding-top: 80px;">
+    <div class="container-scroller text-light signup-container" style="padding-top: 100px;">
             <div class="container-fluid page-body-wrapper full-page-wrapper">
               <div class="row w-100 m-0">
                 <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
@@ -64,23 +64,20 @@
                         </div>
                         <div class="form-group">
                             <label>Username</label>
-                            <input type="text" class="form-control text-light" onkeyup="search()" id="t6" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
+                            <input type="text" class="form-control text-light w-100" onkeyup="search()" id="t6" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
                             <p style="font-size: 13px;" id="info"></p>
                         </div>
-                        <div class="form-group">
+                        <div class="">
                           <label>Password</label>
-                          <input type="password" class="form-control p_input text-light" id="t7" style="background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none;">
-                        </div>
-                        <div class="form-group d-flex align-items-center justify-content-between">
-                          <div class="form-check">
-                            <label class="form-check-label">
-                              <input type="checkbox" class="form-check-input" onclick="myFunction()">Show password</label>
-                          </div>
-                          <!-- <a href="#" class="forgot-pass">Forgot password</a> -->
+                          <div class="d-flex align-items-center justify-content-between" style="height: 40px; background-color: #2A3038; border: 1px solid #2c2e33; box-shadow:none; border-radius: 4px;">
+                                <input type="password" class="text-light" id="t7" style="border-radius: 0%; border: none; outline: none; background-color: #2A3038; width: 95%;">
+                                <span id="eye" style="background-color: #2A3038; padding-right: 5px;"><i onclick="myFunction()" class="bi bi-eye"></i></span>
+                                <span id="closedeye" style="background-color: #2A3038; padding-right: 5px; display: none;"><i onclick="myFunction()" class="bi bi-eye-slash"></i></span>
+                            </div>
                         </div>
                       </form>
                       <div class="text-center">
-                            <button type="submit" class="btn btn-primary btn-block enter-btn my-2" style="width:25vw;" onclick="register()">Sign up
+                            <button type="submit" class="btn btn-primary btn-block enter-btn mt-4" style="width:25vw;" onclick="register()">Sign up
                                 <i class="bi bi-laptop"></i>
                             </button>
                           </div>
@@ -90,7 +87,7 @@
                             <button class="btn btn-google col text-light my-2" style="background: #dc4a38;">
                               <i class="mdi mdi-google-plus"></i>Google plus</button>
                           </div>
-                          <p class="sign-up text-center">Already have an Account?<a href="login.html"> Log in</a></p>
+                          <p class=" text-center">Already have an Account?<a href="login.html"> Log in</a></p>
                           <p class="terms text-center" style="width:100%; font-size:14.2px">By creating an account you are accepting our<a href="#"> Terms & Conditions</a></p>
                     </div>
                   </div>
@@ -150,9 +147,14 @@
             var y = document.getElementById("t7");
             if (y.type === "password") {
                 y.type = "text";
+                document.getElementById("closedeye").style.display = "block"
+                document.getElementById("eye").style.display = "none"
+
             } 
             else {
                 y.type = "password";
+                document.getElementById("eye").style.display = "block"
+                document.getElementById("closedeye").style.display = "none"
             }
         }
 
